@@ -1,3 +1,9 @@
+2010-02-26  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* PropertyList/PlistDocument.cs: Null the XmlResolver from the
+	  XmlReaderSettings so it doesn't try to read the Apple DTD
+	  from the web.
+
 2010-02-24  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* IPhoneCommands.cs:
